[gd_scene load_steps=29 format=3 uid="uid://bfujas5bjj8aq"]

[ext_resource type="Script" uid="uid://cp4q21v87paj2" path="res://Assets/Scenes/sparky_glory_plat.gd" id="1_irb3c"]
[ext_resource type="Texture2D" uid="uid://c3tm6medvv62e" path="res://Assets/Imagens/1528106245788.jpg" id="2_oqjto"]
[ext_resource type="Shader" uid="uid://ygxmhbjqsfp8" path="res://Assets/Scenes/S.gdshader" id="3_n2bky"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_w0epd"]
sky_top_color = Color(0.00834118, 0.0124825, 0.0199202, 1)
sky_horizon_color = Color(0.157161, 0.121533, 0.228232, 1)
ground_bottom_color = Color(0.199355, 0.0527022, 0.47206, 1)
ground_horizon_color = Color(0.157161, 0.121533, 0.228232, 1)

[sub_resource type="Sky" id="Sky_irb3c"]
sky_material = SubResource("ProceduralSkyMaterial_w0epd")

[sub_resource type="Environment" id="Environment_oqjto"]
background_mode = 2
sky = SubResource("Sky_irb3c")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_irb3c"]
data = PackedVector3Array(2.87915e-07, -30.1308, -24.144, 17.0724, -30.1308, -17.0724, 17.0724, 30.1308, -17.0724, 24.144, 30.1308, 0, 17.0724, 30.1308, 17.0724, 0, 30.1308, 0, 17.0724, 30.1308, 17.0724, 24.144, 30.1308, 0, 24.144, -30.1308, 0, 17.0724, 30.1308, 17.0724, -1.05537e-06, 30.1308, 24.144, 0, 30.1308, 0, -1.05537e-06, 30.1308, 24.144, 17.0724, 30.1308, 17.0724, 17.0724, -30.1308, 17.0724, 17.0724, 30.1308, -17.0724, 24.144, 30.1308, 0, 0, 30.1308, 0, 24.144, 30.1308, 0, 17.0724, 30.1308, -17.0724, 17.0724, -30.1308, -17.0724, 2.87915e-07, 30.1308, -24.144, 17.0724, 30.1308, -17.0724, 0, 30.1308, 0, 17.0724, 30.1308, -17.0724, 2.87915e-07, 30.1308, -24.144, 2.87915e-07, -30.1308, -24.144, 24.144, -30.1308, 0, 17.0724, -30.1308, 17.0724, 17.0724, 30.1308, 17.0724, -1.05537e-06, -30.1308, 24.144, 17.0724, -30.1308, 17.0724, 24.144, -30.1308, 0, 17.0724, -30.1308, 17.0724, -1.05537e-06, -30.1308, 24.144, -1.05537e-06, 30.1308, 24.144, -17.0724, -30.1308, 17.0724, -1.05537e-06, -30.1308, 24.144, 24.144, -30.1308, 0, 17.0724, -30.1308, -17.0724, 24.144, -30.1308, 0, 24.144, 30.1308, 0, 17.0724, -30.1308, -17.0724, 2.87915e-07, -30.1308, -24.144, 24.144, -30.1308, 0, -24.144, -30.1308, -2.11074e-06, -17.0724, -30.1308, -17.0724, -17.0724, 30.1308, -17.0724, 2.87915e-07, -30.1308, -24.144, -17.0724, -30.1308, -17.0724, 24.144, -30.1308, 0, -1.05537e-06, 30.1308, 24.144, -17.0724, 30.1308, 17.0724, 0, 30.1308, 0, -17.0724, 30.1308, 17.0724, -1.05537e-06, 30.1308, 24.144, -1.05537e-06, -30.1308, 24.144, -17.0724, 30.1308, 17.0724, -24.144, 30.1308, -2.11074e-06, 0, 30.1308, 0, -24.144, 30.1308, -2.11074e-06, -17.0724, 30.1308, 17.0724, -17.0724, -30.1308, 17.0724, -17.0724, 30.1308, -17.0724, 2.87915e-07, 30.1308, -24.144, 0, 30.1308, 0, 2.87915e-07, 30.1308, -24.144, -17.0724, 30.1308, -17.0724, -17.0724, -30.1308, -17.0724, -24.144, 30.1308, -2.11074e-06, -17.0724, 30.1308, -17.0724, 0, 30.1308, 0, -17.0724, 30.1308, -17.0724, -24.144, 30.1308, -2.11074e-06, -24.144, -30.1308, -2.11074e-06, -1.05537e-06, -30.1308, 24.144, -17.0724, -30.1308, 17.0724, -17.0724, 30.1308, 17.0724, -24.144, -30.1308, -2.11074e-06, -17.0724, -30.1308, 17.0724, 24.144, -30.1308, 0, -17.0724, -30.1308, 17.0724, -24.144, -30.1308, -2.11074e-06, -24.144, 30.1308, -2.11074e-06, -17.0724, -30.1308, -17.0724, 2.87915e-07, -30.1308, -24.144, 2.87915e-07, 30.1308, -24.144, -17.0724, -30.1308, -17.0724, -24.144, -30.1308, -2.11074e-06, 24.144, -30.1308, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_oqjto"]
data = PackedVector3Array(2.03888e-07, -30.1308, -17.0977, 12.0899, -30.1308, -12.0899, 12.0899, 30.1308, -12.0899, 17.0977, 30.1308, 0, 12.0899, 30.1308, 12.0899, 0, 30.1308, 0, 12.0899, 30.1308, 12.0899, 17.0977, 30.1308, 0, 17.0977, -30.1308, 0, 12.0899, 30.1308, 12.0899, -7.47362e-07, 30.1308, 17.0977, 0, 30.1308, 0, -7.47362e-07, 30.1308, 17.0977, 12.0899, 30.1308, 12.0899, 12.0899, -30.1308, 12.0899, 12.0899, 30.1308, -12.0899, 17.0977, 30.1308, 0, 0, 30.1308, 0, 17.0977, 30.1308, 0, 12.0899, 30.1308, -12.0899, 12.0899, -30.1308, -12.0899, 2.03888e-07, 30.1308, -17.0977, 12.0899, 30.1308, -12.0899, 0, 30.1308, 0, 12.0899, 30.1308, -12.0899, 2.03888e-07, 30.1308, -17.0977, 2.03888e-07, -30.1308, -17.0977, 17.0977, -30.1308, 0, 12.0899, -30.1308, 12.0899, 12.0899, 30.1308, 12.0899, -7.47362e-07, -30.1308, 17.0977, 12.0899, -30.1308, 12.0899, 17.0977, -30.1308, 0, 12.0899, -30.1308, 12.0899, -7.47362e-07, -30.1308, 17.0977, -7.47362e-07, 30.1308, 17.0977, -12.0899, -30.1308, 12.0899, -7.47362e-07, -30.1308, 17.0977, 17.0977, -30.1308, 0, 12.0899, -30.1308, -12.0899, 17.0977, -30.1308, 0, 17.0977, 30.1308, 0, 12.0899, -30.1308, -12.0899, 2.03888e-07, -30.1308, -17.0977, 17.0977, -30.1308, 0, -17.0977, -30.1308, -1.49472e-06, -12.0899, -30.1308, -12.0899, -12.0899, 30.1308, -12.0899, 2.03888e-07, -30.1308, -17.0977, -12.0899, -30.1308, -12.0899, 17.0977, -30.1308, 0, -7.47362e-07, 30.1308, 17.0977, -12.0899, 30.1308, 12.0899, 0, 30.1308, 0, -12.0899, 30.1308, 12.0899, -7.47362e-07, 30.1308, 17.0977, -7.47362e-07, -30.1308, 17.0977, -12.0899, 30.1308, 12.0899, -17.0977, 30.1308, -1.49472e-06, 0, 30.1308, 0, -17.0977, 30.1308, -1.49472e-06, -12.0899, 30.1308, 12.0899, -12.0899, -30.1308, 12.0899, -12.0899, 30.1308, -12.0899, 2.03888e-07, 30.1308, -17.0977, 0, 30.1308, 0, 2.03888e-07, 30.1308, -17.0977, -12.0899, 30.1308, -12.0899, -12.0899, -30.1308, -12.0899, -17.0977, 30.1308, -1.49472e-06, -12.0899, 30.1308, -12.0899, 0, 30.1308, 0, -12.0899, 30.1308, -12.0899, -17.0977, 30.1308, -1.49472e-06, -17.0977, -30.1308, -1.49472e-06, -7.47362e-07, -30.1308, 17.0977, -12.0899, -30.1308, 12.0899, -12.0899, 30.1308, 12.0899, -17.0977, -30.1308, -1.49472e-06, -12.0899, -30.1308, 12.0899, 17.0977, -30.1308, 0, -12.0899, -30.1308, 12.0899, -17.0977, -30.1308, -1.49472e-06, -17.0977, 30.1308, -1.49472e-06, -12.0899, -30.1308, -12.0899, 2.03888e-07, -30.1308, -17.0977, 2.03888e-07, 30.1308, -17.0977, -12.0899, -30.1308, -12.0899, -17.0977, -30.1308, -1.49472e-06, 17.0977, -30.1308, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_n2bky"]
data = PackedVector3Array(2.03888e-07, -30.1308, -17.0977, 12.0899, -30.1308, -12.0899, 12.0899, 30.1308, -12.0899, 17.0977, 30.1308, 0, 12.0899, 30.1308, 12.0899, 0, 30.1308, 0, 12.0899, 30.1308, 12.0899, 17.0977, 30.1308, 0, 17.0977, -30.1308, 0, 12.0899, 30.1308, 12.0899, -7.47362e-07, 30.1308, 17.0977, 0, 30.1308, 0, -7.47362e-07, 30.1308, 17.0977, 12.0899, 30.1308, 12.0899, 12.0899, -30.1308, 12.0899, 12.0899, 30.1308, -12.0899, 17.0977, 30.1308, 0, 0, 30.1308, 0, 17.0977, 30.1308, 0, 12.0899, 30.1308, -12.0899, 12.0899, -30.1308, -12.0899, 2.03888e-07, 30.1308, -17.0977, 12.0899, 30.1308, -12.0899, 0, 30.1308, 0, 12.0899, 30.1308, -12.0899, 2.03888e-07, 30.1308, -17.0977, 2.03888e-07, -30.1308, -17.0977, 17.0977, -30.1308, 0, 12.0899, -30.1308, 12.0899, 12.0899, 30.1308, 12.0899, -7.47362e-07, -30.1308, 17.0977, 12.0899, -30.1308, 12.0899, 17.0977, -30.1308, 0, 12.0899, -30.1308, 12.0899, -7.47362e-07, -30.1308, 17.0977, -7.47362e-07, 30.1308, 17.0977, -12.0899, -30.1308, 12.0899, -7.47362e-07, -30.1308, 17.0977, 17.0977, -30.1308, 0, 12.0899, -30.1308, -12.0899, 17.0977, -30.1308, 0, 17.0977, 30.1308, 0, 12.0899, -30.1308, -12.0899, 2.03888e-07, -30.1308, -17.0977, 17.0977, -30.1308, 0, -17.0977, -30.1308, -1.49472e-06, -12.0899, -30.1308, -12.0899, -12.0899, 30.1308, -12.0899, 2.03888e-07, -30.1308, -17.0977, -12.0899, -30.1308, -12.0899, 17.0977, -30.1308, 0, -7.47362e-07, 30.1308, 17.0977, -12.0899, 30.1308, 12.0899, 0, 30.1308, 0, -12.0899, 30.1308, 12.0899, -7.47362e-07, 30.1308, 17.0977, -7.47362e-07, -30.1308, 17.0977, -12.0899, 30.1308, 12.0899, -17.0977, 30.1308, -1.49472e-06, 0, 30.1308, 0, -17.0977, 30.1308, -1.49472e-06, -12.0899, 30.1308, 12.0899, -12.0899, -30.1308, 12.0899, -12.0899, 30.1308, -12.0899, 2.03888e-07, 30.1308, -17.0977, 0, 30.1308, 0, 2.03888e-07, 30.1308, -17.0977, -12.0899, 30.1308, -12.0899, -12.0899, -30.1308, -12.0899, -17.0977, 30.1308, -1.49472e-06, -12.0899, 30.1308, -12.0899, 0, 30.1308, 0, -12.0899, 30.1308, -12.0899, -17.0977, 30.1308, -1.49472e-06, -17.0977, -30.1308, -1.49472e-06, -7.47362e-07, -30.1308, 17.0977, -12.0899, -30.1308, 12.0899, -12.0899, 30.1308, 12.0899, -17.0977, -30.1308, -1.49472e-06, -12.0899, -30.1308, 12.0899, 17.0977, -30.1308, 0, -12.0899, -30.1308, 12.0899, -17.0977, -30.1308, -1.49472e-06, -17.0977, 30.1308, -1.49472e-06, -12.0899, -30.1308, -12.0899, 2.03888e-07, -30.1308, -17.0977, 2.03888e-07, 30.1308, -17.0977, -12.0899, -30.1308, -12.0899, -17.0977, -30.1308, -1.49472e-06, 17.0977, -30.1308, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_x7717"]
data = PackedVector3Array(2.03888e-07, -30.1308, -17.0977, 12.0899, -30.1308, -12.0899, 12.0899, 30.1308, -12.0899, 17.0977, 30.1308, 0, 12.0899, 30.1308, 12.0899, 0, 30.1308, 0, 12.0899, 30.1308, 12.0899, 17.0977, 30.1308, 0, 17.0977, -30.1308, 0, 12.0899, 30.1308, 12.0899, -7.47362e-07, 30.1308, 17.0977, 0, 30.1308, 0, -7.47362e-07, 30.1308, 17.0977, 12.0899, 30.1308, 12.0899, 12.0899, -30.1308, 12.0899, 12.0899, 30.1308, -12.0899, 17.0977, 30.1308, 0, 0, 30.1308, 0, 17.0977, 30.1308, 0, 12.0899, 30.1308, -12.0899, 12.0899, -30.1308, -12.0899, 2.03888e-07, 30.1308, -17.0977, 12.0899, 30.1308, -12.0899, 0, 30.1308, 0, 12.0899, 30.1308, -12.0899, 2.03888e-07, 30.1308, -17.0977, 2.03888e-07, -30.1308, -17.0977, 17.0977, -30.1308, 0, 12.0899, -30.1308, 12.0899, 12.0899, 30.1308, 12.0899, -7.47362e-07, -30.1308, 17.0977, 12.0899, -30.1308, 12.0899, 17.0977, -30.1308, 0, 12.0899, -30.1308, 12.0899, -7.47362e-07, -30.1308, 17.0977, -7.47362e-07, 30.1308, 17.0977, -12.0899, -30.1308, 12.0899, -7.47362e-07, -30.1308, 17.0977, 17.0977, -30.1308, 0, 12.0899, -30.1308, -12.0899, 17.0977, -30.1308, 0, 17.0977, 30.1308, 0, 12.0899, -30.1308, -12.0899, 2.03888e-07, -30.1308, -17.0977, 17.0977, -30.1308, 0, -17.0977, -30.1308, -1.49472e-06, -12.0899, -30.1308, -12.0899, -12.0899, 30.1308, -12.0899, 2.03888e-07, -30.1308, -17.0977, -12.0899, -30.1308, -12.0899, 17.0977, -30.1308, 0, -7.47362e-07, 30.1308, 17.0977, -12.0899, 30.1308, 12.0899, 0, 30.1308, 0, -12.0899, 30.1308, 12.0899, -7.47362e-07, 30.1308, 17.0977, -7.47362e-07, -30.1308, 17.0977, -12.0899, 30.1308, 12.0899, -17.0977, 30.1308, -1.49472e-06, 0, 30.1308, 0, -17.0977, 30.1308, -1.49472e-06, -12.0899, 30.1308, 12.0899, -12.0899, -30.1308, 12.0899, -12.0899, 30.1308, -12.0899, 2.03888e-07, 30.1308, -17.0977, 0, 30.1308, 0, 2.03888e-07, 30.1308, -17.0977, -12.0899, 30.1308, -12.0899, -12.0899, -30.1308, -12.0899, -17.0977, 30.1308, -1.49472e-06, -12.0899, 30.1308, -12.0899, 0, 30.1308, 0, -12.0899, 30.1308, -12.0899, -17.0977, 30.1308, -1.49472e-06, -17.0977, -30.1308, -1.49472e-06, -7.47362e-07, -30.1308, 17.0977, -12.0899, -30.1308, 12.0899, -12.0899, 30.1308, 12.0899, -17.0977, -30.1308, -1.49472e-06, -12.0899, -30.1308, 12.0899, 17.0977, -30.1308, 0, -12.0899, -30.1308, 12.0899, -17.0977, -30.1308, -1.49472e-06, -17.0977, 30.1308, -1.49472e-06, -12.0899, -30.1308, -12.0899, 2.03888e-07, -30.1308, -17.0977, 2.03888e-07, 30.1308, -17.0977, -12.0899, -30.1308, -12.0899, -17.0977, -30.1308, -1.49472e-06, 17.0977, -30.1308, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_avrmk"]
data = PackedVector3Array(2.03888e-07, -30.1308, -17.0977, 12.0899, -30.1308, -12.0899, 12.0899, 30.1308, -12.0899, 17.0977, 30.1308, 0, 12.0899, 30.1308, 12.0899, 0, 30.1308, 0, 12.0899, 30.1308, 12.0899, 17.0977, 30.1308, 0, 17.0977, -30.1308, 0, 12.0899, 30.1308, 12.0899, -7.47362e-07, 30.1308, 17.0977, 0, 30.1308, 0, -7.47362e-07, 30.1308, 17.0977, 12.0899, 30.1308, 12.0899, 12.0899, -30.1308, 12.0899, 12.0899, 30.1308, -12.0899, 17.0977, 30.1308, 0, 0, 30.1308, 0, 17.0977, 30.1308, 0, 12.0899, 30.1308, -12.0899, 12.0899, -30.1308, -12.0899, 2.03888e-07, 30.1308, -17.0977, 12.0899, 30.1308, -12.0899, 0, 30.1308, 0, 12.0899, 30.1308, -12.0899, 2.03888e-07, 30.1308, -17.0977, 2.03888e-07, -30.1308, -17.0977, 17.0977, -30.1308, 0, 12.0899, -30.1308, 12.0899, 12.0899, 30.1308, 12.0899, -7.47362e-07, -30.1308, 17.0977, 12.0899, -30.1308, 12.0899, 17.0977, -30.1308, 0, 12.0899, -30.1308, 12.0899, -7.47362e-07, -30.1308, 17.0977, -7.47362e-07, 30.1308, 17.0977, -12.0899, -30.1308, 12.0899, -7.47362e-07, -30.1308, 17.0977, 17.0977, -30.1308, 0, 12.0899, -30.1308, -12.0899, 17.0977, -30.1308, 0, 17.0977, 30.1308, 0, 12.0899, -30.1308, -12.0899, 2.03888e-07, -30.1308, -17.0977, 17.0977, -30.1308, 0, -17.0977, -30.1308, -1.49472e-06, -12.0899, -30.1308, -12.0899, -12.0899, 30.1308, -12.0899, 2.03888e-07, -30.1308, -17.0977, -12.0899, -30.1308, -12.0899, 17.0977, -30.1308, 0, -7.47362e-07, 30.1308, 17.0977, -12.0899, 30.1308, 12.0899, 0, 30.1308, 0, -12.0899, 30.1308, 12.0899, -7.47362e-07, 30.1308, 17.0977, -7.47362e-07, -30.1308, 17.0977, -12.0899, 30.1308, 12.0899, -17.0977, 30.1308, -1.49472e-06, 0, 30.1308, 0, -17.0977, 30.1308, -1.49472e-06, -12.0899, 30.1308, 12.0899, -12.0899, -30.1308, 12.0899, -12.0899, 30.1308, -12.0899, 2.03888e-07, 30.1308, -17.0977, 0, 30.1308, 0, 2.03888e-07, 30.1308, -17.0977, -12.0899, 30.1308, -12.0899, -12.0899, -30.1308, -12.0899, -17.0977, 30.1308, -1.49472e-06, -12.0899, 30.1308, -12.0899, 0, 30.1308, 0, -12.0899, 30.1308, -12.0899, -17.0977, 30.1308, -1.49472e-06, -17.0977, -30.1308, -1.49472e-06, -7.47362e-07, -30.1308, 17.0977, -12.0899, -30.1308, 12.0899, -12.0899, 30.1308, 12.0899, -17.0977, -30.1308, -1.49472e-06, -12.0899, -30.1308, 12.0899, 17.0977, -30.1308, 0, -12.0899, -30.1308, 12.0899, -17.0977, -30.1308, -1.49472e-06, -17.0977, 30.1308, -1.49472e-06, -12.0899, -30.1308, -12.0899, 2.03888e-07, -30.1308, -17.0977, 2.03888e-07, 30.1308, -17.0977, -12.0899, -30.1308, -12.0899, -17.0977, -30.1308, -1.49472e-06, 17.0977, -30.1308, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_eg3sd"]
data = PackedVector3Array(2.03888e-07, -30.1308, -17.0977, 12.0899, -30.1308, -12.0899, 12.0899, 30.1308, -12.0899, 17.0977, 30.1308, 0, 12.0899, 30.1308, 12.0899, 0, 30.1308, 0, 12.0899, 30.1308, 12.0899, 17.0977, 30.1308, 0, 17.0977, -30.1308, 0, 12.0899, 30.1308, 12.0899, -7.47362e-07, 30.1308, 17.0977, 0, 30.1308, 0, -7.47362e-07, 30.1308, 17.0977, 12.0899, 30.1308, 12.0899, 12.0899, -30.1308, 12.0899, 12.0899, 30.1308, -12.0899, 17.0977, 30.1308, 0, 0, 30.1308, 0, 17.0977, 30.1308, 0, 12.0899, 30.1308, -12.0899, 12.0899, -30.1308, -12.0899, 2.03888e-07, 30.1308, -17.0977, 12.0899, 30.1308, -12.0899, 0, 30.1308, 0, 12.0899, 30.1308, -12.0899, 2.03888e-07, 30.1308, -17.0977, 2.03888e-07, -30.1308, -17.0977, 17.0977, -30.1308, 0, 12.0899, -30.1308, 12.0899, 12.0899, 30.1308, 12.0899, -7.47362e-07, -30.1308, 17.0977, 12.0899, -30.1308, 12.0899, 17.0977, -30.1308, 0, 12.0899, -30.1308, 12.0899, -7.47362e-07, -30.1308, 17.0977, -7.47362e-07, 30.1308, 17.0977, -12.0899, -30.1308, 12.0899, -7.47362e-07, -30.1308, 17.0977, 17.0977, -30.1308, 0, 12.0899, -30.1308, -12.0899, 17.0977, -30.1308, 0, 17.0977, 30.1308, 0, 12.0899, -30.1308, -12.0899, 2.03888e-07, -30.1308, -17.0977, 17.0977, -30.1308, 0, -17.0977, -30.1308, -1.49472e-06, -12.0899, -30.1308, -12.0899, -12.0899, 30.1308, -12.0899, 2.03888e-07, -30.1308, -17.0977, -12.0899, -30.1308, -12.0899, 17.0977, -30.1308, 0, -7.47362e-07, 30.1308, 17.0977, -12.0899, 30.1308, 12.0899, 0, 30.1308, 0, -12.0899, 30.1308, 12.0899, -7.47362e-07, 30.1308, 17.0977, -7.47362e-07, -30.1308, 17.0977, -12.0899, 30.1308, 12.0899, -17.0977, 30.1308, -1.49472e-06, 0, 30.1308, 0, -17.0977, 30.1308, -1.49472e-06, -12.0899, 30.1308, 12.0899, -12.0899, -30.1308, 12.0899, -12.0899, 30.1308, -12.0899, 2.03888e-07, 30.1308, -17.0977, 0, 30.1308, 0, 2.03888e-07, 30.1308, -17.0977, -12.0899, 30.1308, -12.0899, -12.0899, -30.1308, -12.0899, -17.0977, 30.1308, -1.49472e-06, -12.0899, 30.1308, -12.0899, 0, 30.1308, 0, -12.0899, 30.1308, -12.0899, -17.0977, 30.1308, -1.49472e-06, -17.0977, -30.1308, -1.49472e-06, -7.47362e-07, -30.1308, 17.0977, -12.0899, -30.1308, 12.0899, -12.0899, 30.1308, 12.0899, -17.0977, -30.1308, -1.49472e-06, -12.0899, -30.1308, 12.0899, 17.0977, -30.1308, 0, -12.0899, -30.1308, 12.0899, -17.0977, -30.1308, -1.49472e-06, -17.0977, 30.1308, -1.49472e-06, -12.0899, -30.1308, -12.0899, 2.03888e-07, -30.1308, -17.0977, 2.03888e-07, 30.1308, -17.0977, -12.0899, -30.1308, -12.0899, -17.0977, -30.1308, -1.49472e-06, 17.0977, -30.1308, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_2hlw3"]
data = PackedVector3Array(2.03888e-07, -30.1308, -17.0977, 12.0899, -30.1308, -12.0899, 12.0899, 30.1308, -12.0899, 17.0977, 30.1308, 0, 12.0899, 30.1308, 12.0899, 0, 30.1308, 0, 12.0899, 30.1308, 12.0899, 17.0977, 30.1308, 0, 17.0977, -30.1308, 0, 12.0899, 30.1308, 12.0899, -7.47362e-07, 30.1308, 17.0977, 0, 30.1308, 0, -7.47362e-07, 30.1308, 17.0977, 12.0899, 30.1308, 12.0899, 12.0899, -30.1308, 12.0899, 12.0899, 30.1308, -12.0899, 17.0977, 30.1308, 0, 0, 30.1308, 0, 17.0977, 30.1308, 0, 12.0899, 30.1308, -12.0899, 12.0899, -30.1308, -12.0899, 2.03888e-07, 30.1308, -17.0977, 12.0899, 30.1308, -12.0899, 0, 30.1308, 0, 12.0899, 30.1308, -12.0899, 2.03888e-07, 30.1308, -17.0977, 2.03888e-07, -30.1308, -17.0977, 17.0977, -30.1308, 0, 12.0899, -30.1308, 12.0899, 12.0899, 30.1308, 12.0899, -7.47362e-07, -30.1308, 17.0977, 12.0899, -30.1308, 12.0899, 17.0977, -30.1308, 0, 12.0899, -30.1308, 12.0899, -7.47362e-07, -30.1308, 17.0977, -7.47362e-07, 30.1308, 17.0977, -12.0899, -30.1308, 12.0899, -7.47362e-07, -30.1308, 17.0977, 17.0977, -30.1308, 0, 12.0899, -30.1308, -12.0899, 17.0977, -30.1308, 0, 17.0977, 30.1308, 0, 12.0899, -30.1308, -12.0899, 2.03888e-07, -30.1308, -17.0977, 17.0977, -30.1308, 0, -17.0977, -30.1308, -1.49472e-06, -12.0899, -30.1308, -12.0899, -12.0899, 30.1308, -12.0899, 2.03888e-07, -30.1308, -17.0977, -12.0899, -30.1308, -12.0899, 17.0977, -30.1308, 0, -7.47362e-07, 30.1308, 17.0977, -12.0899, 30.1308, 12.0899, 0, 30.1308, 0, -12.0899, 30.1308, 12.0899, -7.47362e-07, 30.1308, 17.0977, -7.47362e-07, -30.1308, 17.0977, -12.0899, 30.1308, 12.0899, -17.0977, 30.1308, -1.49472e-06, 0, 30.1308, 0, -17.0977, 30.1308, -1.49472e-06, -12.0899, 30.1308, 12.0899, -12.0899, -30.1308, 12.0899, -12.0899, 30.1308, -12.0899, 2.03888e-07, 30.1308, -17.0977, 0, 30.1308, 0, 2.03888e-07, 30.1308, -17.0977, -12.0899, 30.1308, -12.0899, -12.0899, -30.1308, -12.0899, -17.0977, 30.1308, -1.49472e-06, -12.0899, 30.1308, -12.0899, 0, 30.1308, 0, -12.0899, 30.1308, -12.0899, -17.0977, 30.1308, -1.49472e-06, -17.0977, -30.1308, -1.49472e-06, -7.47362e-07, -30.1308, 17.0977, -12.0899, -30.1308, 12.0899, -12.0899, 30.1308, 12.0899, -17.0977, -30.1308, -1.49472e-06, -12.0899, -30.1308, 12.0899, 17.0977, -30.1308, 0, -12.0899, -30.1308, 12.0899, -17.0977, -30.1308, -1.49472e-06, -17.0977, 30.1308, -1.49472e-06, -12.0899, -30.1308, -12.0899, 2.03888e-07, -30.1308, -17.0977, 2.03888e-07, 30.1308, -17.0977, -12.0899, -30.1308, -12.0899, -17.0977, -30.1308, -1.49472e-06, 17.0977, -30.1308, 0)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_oqjto"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_n2bky"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x7717"]
albedo_color = Color(0.0392157, 0.117647, 0.247059, 1)
metallic = 1.0
roughness = 0.2
emission_enabled = true
emission = Color(0, 0.635294, 1, 1)
emission_energy_multiplier = 2.0

[sub_resource type="CylinderMesh" id="CylinderMesh_avrmk"]
material = SubResource("StandardMaterial3D_x7717")
top_radius = 0.05
bottom_radius = 0.05
height = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eg3sd"]
transparency = 1
blend_mode = 1
cull_mode = 2
emission_enabled = true
emission = Color(0, 0.968627, 1, 1)
emission_energy_multiplier = 5.0

[sub_resource type="CylinderMesh" id="CylinderMesh_2hlw3"]
material = SubResource("StandardMaterial3D_eg3sd")
top_radius = 0.02
bottom_radius = 0.02
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wy6na"]
albedo_color = Color(0, 0, 0, 1)
emission_enabled = true
emission = Color(0, 0.968627, 1, 1)
emission_energy_multiplier = 10.0
normal_enabled = true
normal_scale = 2.0

[sub_resource type="SphereMesh" id="SphereMesh_qwfpk"]
material = SubResource("StandardMaterial3D_wy6na")
radius = 0.1
height = 0.2
radial_segments = 8

[sub_resource type="Gradient" id="Gradient_5gc7w"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_375xw"]
gradient = SubResource("Gradient_5gc7w")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wh5p4"]
direction = Vector3(0, 1, 0)
initial_velocity_min = 0.5
initial_velocity_max = 0.5
gravity = Vector3(0, -0.2, 0)
scale_min = 0.02
color = Color(0, 0.666667, 1, 1)
color_ramp = SubResource("GradientTexture1D_375xw")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7y41i"]
render_priority = 0
shader = ExtResource("3_n2bky")
shader_parameter/color = Color(0, 0.5, 1, 1)
shader_parameter/pulse_speed = 2.0

[sub_resource type="QuadMesh" id="QuadMesh_pfhg6"]
material = SubResource("ShaderMaterial_7y41i")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n2bky"]
render_priority = 0
shader = ExtResource("3_n2bky")
shader_parameter/color = Color(0, 0.5, 1, 1)
shader_parameter/pulse_speed = 2.0

[sub_resource type="ImmediateMesh" id="ImmediateMesh_x7717"]

[node name="Jumper" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.62932, -0.777146, -3.39701e-08, 0, -4.37114e-08, 1, -0.777146, 0.62932, 2.75085e-08, 0, 0, 0)
light_color = Color(0.152499, 0.565381, 0.330249, 1)
light_energy = 0.9
shadow_enabled = true
directional_shadow_max_distance = 348.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_oqjto")

[node name="Plataformas" type="Node" parent="."]

[node name="Inicio" type="CSGCylinder3D" parent="Plataformas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0)
radius = 24.144
height = 60.2616

[node name="StaticBody3D" type="StaticBody3D" parent="Plataformas/Inicio"]

[node name="CSGBakedCollisionShape3D" type="CollisionShape3D" parent="Plataformas/Inicio/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_irb3c")

[node name="Plat" type="CSGCylinder3D" parent="Plataformas"]
transform = Transform3D(0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0, 1, 57.407, 20, 158.389)
radius = 17.0977
height = 60.2616

[node name="StaticBody3D" type="StaticBody3D" parent="Plataformas/Plat"]

[node name="CSGBakedCollisionShape3D" type="CollisionShape3D" parent="Plataformas/Plat/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_oqjto")

[node name="Plat2" type="CSGCylinder3D" parent="Plataformas"]
transform = Transform3D(0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0, 1, -81.082, 20, 278.142)
radius = 17.0977
height = 60.2616

[node name="StaticBody3D" type="StaticBody3D" parent="Plataformas/Plat2"]

[node name="CSGBakedCollisionShape3D" type="CollisionShape3D" parent="Plataformas/Plat2/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_n2bky")

[node name="Plat3" type="CSGCylinder3D" parent="Plataformas"]
transform = Transform3D(0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0, 1, 78.588, 20, 477.655)
radius = 17.0977
height = 60.2616

[node name="StaticBody3D" type="StaticBody3D" parent="Plataformas/Plat3"]

[node name="CSGBakedCollisionShape3D" type="CollisionShape3D" parent="Plataformas/Plat3/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_x7717")

[node name="Plat4" type="CSGCylinder3D" parent="Plataformas"]
transform = Transform3D(0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0, 1, -33.579, 20, 698.655)
radius = 17.0977
height = 60.2616

[node name="StaticBody3D" type="StaticBody3D" parent="Plataformas/Plat4"]

[node name="CSGBakedCollisionShape3D" type="CollisionShape3D" parent="Plataformas/Plat4/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_avrmk")

[node name="Plat5" type="CSGCylinder3D" parent="Plataformas"]
transform = Transform3D(0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0, 1, 111.047, 20, 862.655)
radius = 17.0977
height = 60.2616

[node name="StaticBody3D" type="StaticBody3D" parent="Plataformas/Plat5"]

[node name="CSGBakedCollisionShape3D" type="CollisionShape3D" parent="Plataformas/Plat5/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_eg3sd")

[node name="Plat6" type="CSGCylinder3D" parent="Plataformas"]
transform = Transform3D(0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0, 1, -69.086, 20, 1128.66)
radius = 17.0977
height = 60.2616

[node name="StaticBody3D" type="StaticBody3D" parent="Plataformas/Plat6"]

[node name="CSGBakedCollisionShape3D" type="CollisionShape3D" parent="Plataformas/Plat6/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_2hlw3")

[node name="SparkyGloryPlat" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 51, 0)
script = ExtResource("1_irb3c")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SparkyGloryPlat"]
mesh = SubResource("CapsuleMesh_oqjto")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SparkyGloryPlat"]
shape = SubResource("CapsuleShape3D_n2bky")

[node name="CameraPivot" type="Node3D" parent="SparkyGloryPlat"]

[node name="Camera3D" type="Camera3D" parent="SparkyGloryPlat/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.489243, 0)
fov = 90.0

[node name="RayCast3D" type="RayCast3D" parent="SparkyGloryPlat/CameraPivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.380616, -0.357296, -0.410274)
target_position = Vector3(0, 0, -5)

[node name="UI" type="CanvasLayer" parent="SparkyGloryPlat"]

[node name="Speedometer" type="Label" parent="SparkyGloryPlat/UI"]
offset_right = 40.0
offset_bottom = 23.0

[node name="HookIndicator" type="TextureRect" parent="SparkyGloryPlat/UI"]
offset_left = 2.0
offset_top = 446.0
offset_right = 202.0
offset_bottom = 646.0
texture = ExtResource("2_oqjto")

[node name="DashCharges" type="Label" parent="SparkyGloryPlat/UI"]
offset_left = 2.0
offset_top = 201.0
offset_right = 42.0
offset_bottom = 224.0

[node name="DashCooldownTimer" type="Timer" parent="SparkyGloryPlat"]
one_shot = true

[node name="HookTimer" type="Timer" parent="SparkyGloryPlat"]
one_shot = true

[node name="WhipAnchor" type="Marker3D" parent="SparkyGloryPlat"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.526649, 0, 0)

[node name="WhipBase" type="MeshInstance3D" parent="SparkyGloryPlat/WhipAnchor"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_avrmk")

[node name="WhipSegment" type="MeshInstance3D" parent="SparkyGloryPlat/WhipAnchor"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.05)
mesh = SubResource("CylinderMesh_2hlw3")

[node name="WhipTip" type="Node3D" parent="SparkyGloryPlat/WhipAnchor"]

[node name="TipMesh" type="MeshInstance3D" parent="SparkyGloryPlat/WhipAnchor/WhipTip"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
mesh = SubResource("SphereMesh_qwfpk")

[node name="WhipParticles" type="GPUParticles3D" parent="SparkyGloryPlat/WhipAnchor/WhipTip"]
emitting = false
process_material = SubResource("ParticleProcessMaterial_wh5p4")
draw_pass_1 = SubResource("QuadMesh_pfhg6")

[node name="WhipLine" type="MeshInstance3D" parent="SparkyGloryPlat/WhipAnchor"]
material_override = SubResource("ShaderMaterial_n2bky")
mesh = SubResource("ImmediateMesh_x7717")
